--- a/index.html
+++ b/index.html
@@ -60,6 +60,39 @@
             { phrase: "Джейс", message: "Проблемы?" },
             { phrase: "Энди Маск", message: "Ты дебил?" },
           { phrase: "Энди", message: "Ты дебил?" },
+            { phrase: "Шеррил Маск", message: "Не помню такую" },
+          { phrase: "Шеррил", message: "Не помню такую" },
+            { phrase: "Мэй Гонзалез", message: "Yes, honey" },
+            { phrase: "Мэй", message: "Yes, honey" },
+            { phrase: "Женя", message: "Йоу" },
+            { phrase: "Максимилиан Фостер", message: "Йоу" },
+           { phrase: "Отвёртка", message: "Лучший инструмент" },
+            { phrase: "Отвертка", message: "Лучший инструмент" },
+            { phrase: "Зуб", message: "Улика" },
+            { phrase: "Крушение", message: "О как" },
+            { phrase: "Кайрос", message: "Дом" },
+            { phrase: "Hesoyam", message: "Кидай скрин автору, получи бонус" },
+          { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+           { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+          { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+           { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
