--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>КРНЕДИ</title>
+    <title>ПВЁСОЙТЭ)</title>
 <head>
 <body>
  <h1>Введите текст</h1>
