--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@ return false;
             { phrase: "Крушение", message: "О как" },
             { phrase: "Кайрос", message: "Дом" },
             { phrase: "Hesoyam", message: "Кидай скрин автору, получи бонус" },
-          { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-           { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-          { phrase: "", message: "" },
+          { phrase: "f12", message: "Ладно" },
+            { phrase: "Тайна", message: "I...am steve" },
+            { phrase: "Граница", message: "S2FyYWthcw==" },
+            { phrase: "Владимир", message: "11010000 10111101 11010000 10110000 11010000 10111001 11010000 10110100 11010001 10000011 00100000 11010000 10111010 11010000 10110000 11010000 10110110 11010000 10110100 11010000 10111110 11010000 10110011 11010000 10111110 00101110 00101110 00101110 00100000 11010000 10111000 00100000 11010000 10110010 11010000 10110000 11010001 10000001 00100000 11010001 10000010 11010000 10111110 11010000 10110110 11010000 10110101" },
+            { phrase: "Зефирка", message: "Милаха" },
+           { phrase: "караганда", message: "0J/Qu9C+0YnQsNC00Ywg0LPQsNCz0LDRgNC40L3QsA==" },
+            { phrase: "Лодочник", message: "Вмешательство" },
+            { phrase: "Висячие сады", message: "Ад для аллергиков" },
+            { phrase: "Туманные Прерии", message: "Пейзаж в окне опять застыл Туман, как в фильме Сайлент Хилл Всё тот же скучный, надоевший вид" },
+            { phrase: "Сосал?", message: "да" },
+            { phrase: "Река", message: "Тайна на глубине" },
+          { phrase: "Родион", message: "Где... я? Так темно... я умер?" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
