--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>ПВЁСОЙТЭ)</title>
 <head>
 <body>
+  <div class="container" style="display:flex; align-items:center; justify-content:center;"
  <h1>Введите текст</h1>
-    <input type="text" id="userInput" placeholder="Напиши мне)" style="position: relative; left: 800px; top: 750px;">
-    <button style="position: relative; left: 800px; top: 750px;" onclick="checkInput()">Анализ</button>
+    <input type="text" id="userInput" placeholder="Напиши мне)"> //style="position: relative; left: 800px; top: 750px;"
+    <button onclick="checkInput()">Ввод</button> //style="position: relative; left: 800px; top: 750px;"
   <p style="position: relative; left: 800px; top: 750px;" id="message"></p>
   <script type="text/javascript">
 document.onkeydown = function(e) {
@@ -147,13 +148,6 @@ return false;
     </body>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px>
-    </p>
-        <img src="Второй.png" 
-        <img src="Всем привет.jpg" width="500" style="position: relative; left: x ; top: 5px;">
-        <img src="отвёрточка.gif" width="500" style="position: relative; left: 800px ; top: 2px;">
-        <img src="Секретик.png" width="700" style="position: relative; left: 0px ; top: 2000px;">
-        <img src="Первый.png" width="700" style="position: relative; left : 4px ; top: -500px;">
-        <img src="Второй.png" width="600" style="position: relative; left: 600px ; top: -500px;">
-    </p>
+   
 </body>
 </html>
