--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ПВЁСОЙТЭ)</title>
+    <title>Арг</title>
 <head>
 <body>
-  <div class="container" style="display:flex; align-items:center; justify-content:center;"
+  <div class="container" style="width: 1200px; height: 650px; display:flex; align-items:center; justify-content:center;"
  <h1>Введите текст</h1>
     <input type="text" id="userInput" placeholder="Напиши мне)"> //style="position: relative; left: 800px; top: 750px;"
     <button onclick="checkInput()">Ввод</button> //style="position: relative; left: 800px; top: 750px;"
