--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ return false;
         }
     </script>
 </body>
-    <body style="background-color: black;">
+    <body style="background-color: #222; display: flex; justify-content:center; align-items:center;">
     </body>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px>
