--- a/index.html
+++ b/index.html
@@ -7,24 +7,12 @@
 <body>
   <div class="container" style="width: 1200px; height: 650px; display:flex; align-items:center; justify-content:center;"
  <h1>Введите текст</h1>
-    <input type="text" id="userInput" placeholder="Напиши мне)"> //style="position: relative; left: 800px; top: 750px;"
-    <button onclick="checkInput()">Ввод</button> //style="position: relative; left: 800px; top: 750px;"
+    <input type="text" id="userInput" placeholder="Напиши мне)">
+    <button onclick="checkInput()">Ввод</button> 
   <p style="position: relative; left: 800px; top: 750px;" id="message"></p>
   <script type="text/javascript">
 document.onkeydown = function(e) {
-if(event.keyCode == 123) {
-return false;
-}
-if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
-return false;
-}
-if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
-return false;
-}
-if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
-return false;
-}
-}
+
 </script>
   <script>
         // Массив с фразами и сообщениями
