--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>Арг</title>
 <head>
 <body>
-  <div class="container" style="width: 1200px; height: 650px; display:flex; align-items:center; justify-content:center;"
- <h1>Введите текст</h1>
+  <div class="container" style="width: 1200px; height: 650px; display:flex; align-items:center; justify-content:center;">
+ 
     <input type="text" id="userInput" placeholder="Напиши мне)">
     <button onclick="checkInput()">Ввод</button> 
+  </div>
   <p style="position: relative; left: 800px; top: 750px;" id="message"></p>
   <script type="text/javascript">
 document.onkeydown = function(e) {
