--- a/index.html
+++ b/index.html
@@ -136,6 +136,13 @@ document.onkeydown = function(e) {
     </body>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px>
-   
+     </p>
+        <img src="Второй.png" 
+        <img src="Всем привет.jpg" width="500" style="position: relative; left: x ; top: 5px;">
+        <img src="отвёрточка.gif" width="500" style="position: relative; left: 800px ; top: 2px;">
+        <img src="Секретик.png" width="700" style="position: relative; left: 0px ; top: 2000px;">
+        <img src="Первый.png" width="700" style="position: relative; left : 4px ; top: -500px;">
+        <img src="Второй.png" width="600" style="position: relative; left: 600px ; top: -500px;">
+    </p>
 </body>
 </html>
