--- a/index.html
+++ b/index.html
@@ -138,11 +138,9 @@ document.onkeydown = function(e) {
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px>
      </p>
         <img src="Второй.png" 
-        <img src="Всем привет.jpg" width="500" style="position: relative; left: x ; top: 5px;">
-        <img src="отвёрточка.gif" width="500" style="position: relative; left: 800px ; top: 2px;">
-        <img src="Секретик.png" width="700" style="position: relative; left: 0px ; top: 2000px;">
-        <img src="Первый.png" width="700" style="position: relative; left : 4px ; top: -500px;">
-        <img src="Второй.png" width="600" style="position: relative; left: 600px ; top: -500px;">
+        <img src="IMG_20250410_173439.jpg" width="500">
+        <img src="IMG_20250412_140331.jpg" width="500">
+        <img src="IMG_20250412_141036.jpg" width="700">
     </p>
 </body>
 </html>
