--- a/index.html
+++ b/index.html
@@ -135,6 +135,6 @@ document.onkeydown = function(e) {
     <body style="background-color: #222; display: flex; justify-content:center; align-items:center;">
     </body>
 </head>
-    <p style="font-family: Comic Sans Ms; color: red;font-size: 50px>
+    <p style="font-family: Comic Sans Ms; color: red; font-size: 50px">
 </body>
 </html>
