--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@ document.onkeydown = function(e) {
                 messageElement.style.color = "red";
             }
         }
+        checkInput()
     </script>
 </body>
     <body style="background-color: #222; display: flex; justify-content:center; align-items:center;">
