--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <input type="text" id="userInput" placeholder="Напиши мне)">
     <button onclick="checkInput()">Ввод</button> 
   </div>
-  <p style="position: relative; left: 800px; top: 750px;" id="message"></p>
+  <p id="message"></p>
   <script type="text/javascript">
 document.onkeydown = function(e) {
   <script>
