--- a/index.html
+++ b/index.html
@@ -5,13 +5,27 @@
     <title>Арг</title>
 <head>
 <body>
-  <div class="container" style="width: 1200px; height: 650px; display:flex; align-items:center; justify-content:center;">
-    <input type="text" id="userInput" placeholder="Напиши мне)">
-    <button onclick="checkInput()">Ввод</button> 
+  <div class="container" style="width:1200px; height:650px; display:flex; align-items:center; justify-content:center;">
+      <input type="text" id="userInput" placeholder="Напиши мне)" style="position: relative; left: 800px; top: 750px;">
+      <button onclick="checkInput()">Анализ</button>
+    <p id="message"></p>
   </div>
-  <p id="message"></p>
   <script type="text/javascript">
 document.onkeydown = function(e) {
+if(event.keyCode == 123) {
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+return false;
+}
+if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+return false;
+}
+}
+</script>
   <script>
         // Массив с фразами и сообщениями
         const phrases = [
@@ -75,18 +89,18 @@ document.onkeydown = function(e) {
             { phrase: "Крушение", message: "О как" },
             { phrase: "Кайрос", message: "Дом" },
             { phrase: "Hesoyam", message: "Кидай скрин автору, получи бонус" },
-          { phrase: "f12", message: "Ладно" },
-            { phrase: "Тайна", message: "I...am steve" },
-            { phrase: "Граница", message: "S2FyYWthcw==" },
-            { phrase: "Владимир", message: "11010000 10111101 11010000 10110000 11010000 10111001 11010000 10110100 11010001 10000011 00100000 11010000 10111010 11010000 10110000 11010000 10110110 11010000 10110100 11010000 10111110 11010000 10110011 11010000 10111110 00101110 00101110 00101110 00100000 11010000 10111000 00100000 11010000 10110010 11010000 10110000 11010001 10000001 00100000 11010001 10000010 11010000 10111110 11010000 10110110 11010000 10110101" },
-            { phrase: "Зефирка", message: "Милаха" },
-           { phrase: "караганда", message: "0J/Qu9C+0YnQsNC00Ywg0LPQsNCz0LDRgNC40L3QsA==" },
-            { phrase: "Лодочник", message: "Вмешательство" },
-            { phrase: "Висячие сады", message: "Ад для аллергиков" },
-            { phrase: "Туманные Прерии", message: "Пейзаж в окне опять застыл Туман, как в фильме Сайлент Хилл Всё тот же скучный, надоевший вид" },
-            { phrase: "Сосал?", message: "да" },
-            { phrase: "Река", message: "Тайна на глубине" },
-          { phrase: "Родион", message: "Где... я? Так темно... я умер?" },
+          { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+           { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+            { phrase: "", message: "" },
+          { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
@@ -130,10 +144,9 @@ document.onkeydown = function(e) {
         }
     </script>
 </body>
-    <body style="background-color: #222; display: flex; justify-content:center; align-items:center;">
+    <body style="background-color: #222; display:flex; align-items: center; justify-content: center;">
     </body>
 </head>
     <p style="font-family: Comic Sans Ms; color: red;font-size: 50px>
-   
 </body>
 </html>
