--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 <body>
   <div class="container" style="width:1200px; height:650px; display:flex; align-items:center; justify-content:center;">
-      <input type="text" id="userInput" placeholder="Напиши мне)" style="position: relative; left: 800px; top: 750px;">
+      <input type="text" id="userInput" placeholder="Напиши мне)">
       <button onclick="checkInput()">Анализ</button>
     <p id="message"></p>
   </div>
