--- a/index.html
+++ b/index.html
@@ -5,27 +5,12 @@
     <title>Арг</title>
 <head>
 <body>
-  <div class="container" style="width:1200px; height:650px; display:flex; align-items:center; justify-content:center;">
+  <div class="container" style="width:1200px; height:650px; display:flex; align-items:center; justify-content:center; gap:10px;">
       <input type="text" id="userInput" placeholder="Напиши мне)">
       <button onclick="checkInput()">Анализ</button>
     <p id="message"></p>
   </div>
   <script type="text/javascript">
-document.onkeydown = function(e) {
-if(event.keyCode == 123) {
-return false;
-}
-if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
-return false;
-}
-if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
-return false;
-}
-if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
-return false;
-}
-}
-</script>
   <script>
         // Массив с фразами и сообщениями
         const phrases = [
@@ -89,12 +74,12 @@ return false;
             { phrase: "Крушение", message: "О как" },
             { phrase: "Кайрос", message: "Дом" },
             { phrase: "Hesoyam", message: "Кидай скрин автору, получи бонус" },
-          { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
-           { phrase: "", message: "" },
+          { phrase: "Родион", message: "Я....  умер?" },
+            { phrase: "Лодочник", message: "Вмешательство" },
+            { phrase: "Сосал?", message: "Да" },
+            { phrase: "Арг", message: "0J/Qu9C+0YnQsNC00Ywg0LPQsNCz0LDRgNC40L3QsA==" },
+            { phrase: "Адам Фрэнсис", message: "Что?... Где я?...Я умер" },
+           { phrase: "Владимир", message: "Найду и вас..." },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
