--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ return false;
             { phrase: "Райнер Гослинг", message: "..." },
            { phrase: "Эрик Вайс", message: "https://youtu.be/Ds14zhfHEvE?si=waKytiSgRa7kAJhW" },
             { phrase: "Казуити Сода", message: "Привет!" },
-            { phrase: "Да", message: "Пизда" },
+            { phrase: "Да.", message: "Пизда" },
             { phrase: "Нет", message: "Пидора ответ" },
             { phrase: "Шлюхи аргумент", message: "Хуй" },
             { phrase: "Бебич", message: "Шкебеде" },
