--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ return false;
             { phrase: "Падающий армянин", message: "Я самый лучший" },
             { phrase: "Небоскреб", message: "Когда нибудь сделаю" },
             { phrase: "Лодочник", message: "вмешательство" },
-            { phrase: "", message: "" },
-            { phrase: "", message: "" },
+            { phrase: "Река", message: "Тайна" },
+            { phrase: "Туманные Прерии", message: "Туман как в фильме Сайлент Хилл" },
           { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
