--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ return false;
             { phrase: "Лодочник", message: "вмешательство" },
             { phrase: "Река", message: "Тайна" },
             { phrase: "Туманные Прерии", message: "Туман как в фильме Сайлент Хилл" },
-          { phrase: "", message: "" },
+          { phrase: "Лист на Гагарина", message: "Они.Еще.Живы" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
             { phrase: "", message: "" },
