--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
 <body>
   <div class="container" style="width:1200px; height:650px; display:flex; align-items:center; justify-content:center; gap:10px;">
-      <input type="text" id="userInput" placeholder="Напиши мне)">
-      <button onclick="checkInput()">Анализ</button>
+      <input type="text" id="userInput" placeholder="Ввести код)">
+      <button onclick="checkInput()">Отправить</button>
     <p id="message"></p>
   </div>
   <script type="text/javascript">
